fix : 카테고리 기준 관심 셀럽 조회
- 카테고리 기준 관심 셀럽 조회 시 뉴셀럽 처리 추가.